# jogo-de-tiro-python

./: LICENSE  pyproject.toml
game/: main.py
