[tool.poetry]
name = "jogo-de-tiro-python"
version = "0.1.0"
description = "Um jogo para treinar conceitos do SOLID, buscando se inspirar no Half Life 2, feito em Panda3D + Python"
authors = ["Victor Hugo Viana Santos <torugosis@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
panda3d = "^1.10.8"

[tool.poetry.dev-dependencies]
black = {version = "^20.8b1", allow-prereleases = true}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
